| Summary: | ASTERISK-25400: Hints broken when "CustomPresence" doesn't exist in AstDB | ||
| Reporter: | Andrew Nagy (tm1000) | Labels: | |
| Date Opened: | 2015-09-17 15:10:49 | Date Closed: | 2015-10-07 10:54:59 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/AstDB |
| Versions: | 11.20.0 13.5.0 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Four (PJSIP & SIP) extensions:
core show hints: {code} 1000@ext-local : PJSIP/1000&Custom:DN State:Idle Presence:available Watchers 0 1002@ext-local : SIP/1002&Custom:DND1 State:Idle Presence:available Watchers 0 1003@ext-local : PJSIP/1003&Custom:DN State:Unavailable Presence: Watchers 0 1004@ext-local : SIP/1004&Custom:DND1 State:Unavailable Presence: Watchers 0 {code} 1003 and 1004 were just created, 1000 and 1002 were previously created. 1003 and 1004 don't have "CustomPresence" Asterisk Database trees. Therefore their presence shows up as "" eg NULL. After talking with Josh in IRC about this he all but confirmed that Asterisk should be setting "not_set" when there aren't any CustomPresence states instead of null. Null ends up blocking any and all subscription events database show CustomPresence: {code} /CustomPresence/1000 : available /CustomPresence/1002 : available {code} {quote} 12:59 PM <tm1000> file: I guess I should just report on the fact that when Presence is somehow set to a null state (Blank) no hints work 1:00 PM <@file> include the astdb entries for the custom presence 1:02 PM <tm1000> file: yeah there is no “CustomPresence/XXXX” value for those 1:02 PM <tm1000> should we be creating them? 1:02 PM <@file> nope, lack of them should make it not_set {quote} If I later add a CustomPresence key into the database then hints work once again | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-09-17 15:10:50.903-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Ivan Poddubny (ipoddubny) 2015-10-07 02:07:26.910-0500 Posted a patch for review: https://gerrit.asterisk.org/#/c/1408/ | ||